--- a/P001670.opf/layers/v001/Pagination.yml
+++ b/P001670.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 1beba3577ecf4965b1bf8108a19d7ee3
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d3b2271863804875992eccb75793fb9c:
