--- a/P001670.opf/meta.yml
+++ b/P001670.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P001670
 initial_creation_type: ocr
 created_at: 21/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 10:13:39.578432
 source_metadata:
   id: bdr:W8LS19210
   title: སློབ་དཔོན་ཀླུ་སྒྲུབ་ཀྱི་སྨན་ཡིག་གཅེས་བཏུས།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 414
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
